--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
