--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "video site project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --ignore 'scss'",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "author": "KG",
   "license": "ISC",
@@ -12,7 +14,10 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/node": "^7.13.13",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -21,16 +26,25 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.2.0",
     "pug": "^3.0.2",
+    "sass-loader": "^11.0.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "postcss": "^8.2.12",
+    "prettier": "^2.2.1",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0"
   }
 }
